--- a/src/Modal.css
+++ b/src/Modal.css
@@ -13,11 +13,12 @@
   position: fixed;
   background: white;
   width: 80%;
-  height: auto;
+  height: 650px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 1em;
+  overflow-y: auto;
 }
 
 .modal-main button.close {
