--- a/src/Modal.css
+++ b/src/Modal.css
@@ -19,6 +19,8 @@
   transform: translate(-50%, -50%);
   padding: 1em;
   overflow-y: auto;
+  background-color: #C8A2C8;
+
 }
 
 .modal-main button.close {
